test/expected/explain_o_arrow_i.out
explain int operator->()
        ^
9: error: operator -> must return a pointer to struct, union, or class
